Advised Syntax in Local_style

--- a/bootstrap/Local_style.scss
+++ b/bootstrap/Local_style.scss
@@ -2,3 +2,21 @@
          ADD EXTRA STYLE - cf. Advised Syntax
 --------------------------------------------------*/
 
+/* 
+
+In order to recognize your own classes from Bootstrap classes,
+I recommand you to format your additional classes or ID with
+uppercase.
+
+Ex : 
+
+#MAIN_TITLE{
+    font-family: title-font;
+}
+
+.SECTION_ONE{
+    background-image: back.png;
+}
+
+*/
+
