--- a/bootstrap/Bootstrap_over.scss
+++ b/bootstrap/Bootstrap_over.scss
@@ -1,6 +1,9 @@
-/*-------------------------------------------------
-         UNCOMMENT TO OVERWRITE VARIABLE
---------------------------------------------------*/
+/*!---- from Bootstrap_over.scss ----*/
+
+
+//-------------------------------------------------
+//       UNCOMMENT TO OVERWRITE VARIABLE
+//-------------------------------------------------
 
 //? Color system
 
