--- a/bootstrap/Local_style.scss
+++ b/bootstrap/Local_style.scss
@@ -1,22 +1,19 @@
-/*-------------------------------------------------
-         ADD EXTRA STYLE - cf. Advised Syntax
---------------------------------------------------*/
+//-------------------------------------------------
+//       ADD EXTRA STYLE - cf. Advised Syntax
+//-------------------------------------------------
 
-/* 
 
-In order to recognize your own classes from Bootstrap classes,
-I recommand you to format your additional classes or ID with
-uppercase.
+// In order to recognize your own classes from Bootstrap classes,
+// I recommand you to format your additional classes or ID with
+// uppercase.
 
-Ex : 
+// Ex : 
 
-#MAIN_TITLE{
-    font-family: title-font;
-}
+// #MAIN_TITLE{
+//    font-family: title-font;
+// }
 
-.SECTION_ONE{
-    background-image: back.png;
-}
-
-*/
+// .SECTION_ONE{
+//    background-image: back.png;
+// }
 
